# tea-util

./: .appveyor.yml  .gitignore  .teaignore  .travis.yml  Darafile  README-CN.md  README.md  Teafile  main.tea  ut.sh
.github/workflows/: swift.yml  testCSharp.yml  testGo.yml  testJava.yml  testPHP.yml  testPython.yml  testPython2.yml  testTS.yml  test_csharp.yml  test_go.yml  test_java.yml  test_php.yml  test_python.yml  test_swift.yml  test_typescript.yml
cc/: Util.cc  Util.h
cpp/: CMakeLists.txt  README-CN.md  README.md
cpp/cmake/: darabonba_utilConfig.cmake.in
cpp/include/darabonba/: util.hpp
cpp/scripts/: build.sh  codecov.sh  format.sh  install.sh  run_ut.sh
cpp/src/: assert.cpp  default.cpp  parse.cpp  util.cpp  util.h
cpp/tests/: assert.cpp  default.cpp  main.cpp  parse.cpp  util.cpp
csharp/: ChangeLog.md  README-CN.md  README.md  TeaUtil.sln
csharp/core/: Common.cs  TeaUtil.csproj
csharp/core/Models/: ExtendsParameters.cs  RuntimeObject.cs  RuntimeOptions.cs
csharp/core/Properties/: AssemblyInfo.cs
csharp/core/Utils/: DictUtils.cs  Extensions.cs  ReadJsonUtil.cs
csharp/tests/: CommonTest.cs  tests.csproj
csharp/tests/Models/: RuntimeObjectTest.cs
csharp/tests/Utils/: DictUtilsTest.cs  ExtensionsTest.cs  ReadJsonUtilTest.cs
golang/: ChangeLog.txt  README-CN.md  README.md  go.mod  go.sum
golang/service/: service.go  service_test.go  util_test.go
golang/utils/: utils.go  utils_test.go
java/: ChangeLog.txt  README-CN.md  README.md  pom.xml
java/src/main/java/com/aliyun/teautil/: Common.java  JavaProject.java  MapTypeAdapter.java
java/src/main/java/com/aliyun/teautil/models/: ExtendsParameters.java  RuntimeObject.java  RuntimeOptions.java  TeaUtilException.java
java/src/test/java/com/aliyun/teautil/: CommonTest.java  ToMapTest.java
java/src/test/java/com/aliyun/teautil/models/: RuntimeOptionsTest.java
kotlin/: pom.xml
kotlin/src/main/kotlin/com/aliyun/teautil/: Client.kt  KotlinProject.kt
kotlin/src/main/kotlin/com/aliyun/teautil/models/: RuntimeOptions.kt
kotlin/src/test/kotlin/com/aliyun/teautil/: ClientTest.kt
php/: README-CN.md  README.md  composer.json  phpunit.xml
php/src/: Common.php  Utils.php
php/src/Utils/: ExtendsParameters.php  RuntimeOptions.php
php/tests/: UtilsTest.php  bootstrap.php
php/tests/unit/: CommonTest.php
python/: ChangeLog.md  README-CN.md  README.md  setup.py
python/alibabacloud_tea_util/: __init__.py  client.py  models.py
python/alibabacloud_tea_util_sse/: client.py  models.py
python/tea_util/: client.py  models.py
python/tests/: run_test.py  test_aioclient.py  test_client.py  test_models.py
python2/: ChangeLog.md  README-CN.md  README.md  setup.py
python2/alibabacloud_tea_util/: client.py  models.py
python2/tests/: test_client.py  test_models.py  test_open.txt
swift/: .gitignore  Cartfile  ChangeLog.md  Package.swift  README-CN.md  README.md  TeaUtils.podspec
swift/Sources/TeaUtils/: Client.swift  Extension.swift  Models.swift  TeaUtils.swift  Utils.swift
swift/Tests/: LinuxMain.swift
swift/Tests/TeaUtilsTests/: TeaUtilsTests.swift  XCTestManifests.swift
ts/: ChangeLog.txt  README-CN.md  README.md  package.json
ts/src/: client.ts
ts/test/: client.spec.ts
